policy/validate-tags.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-cost-center-tagging
  namespace: default
  resourceVersion: default
  annotations:
    policies.kyverno.io/title: Ensure Cost Center tags are enabled
    policies.kyverno.io/category: OCI Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Ensure resources are tagged appropriately for specific purposes, which include cost management, aggregation, reporting, and bulk action.
      Reference: https://docs.oracle.com/en-us/iaas/Content/API/SDKDocs/terraformbestpractices_topic-Tagging_Resources.htm
    policies.nirmata.io/remediation-docs: "https://docs.oracle.com/en-us/iaas/Content/API/SDKDocs/terraformbestpractices_topic-Tagging_Resources.htm"
      
spec:
  rules:
    - name: check-cost-center-tag
      match:
        all:
        - ($analyzer.resource.type): terraform-config
        - (resource.oci_identity_compartment != null): true
      assert:
        all:
        - message: Ensure Cost Center tags are enabled.
          check:
            ~.resource:
              ~.(values(@)[].defined_tags):
                ("Operations.CostCenter" != null): true
        - message: Ensure Cost Center tags are enabled.
          check:
            ~.resource:
                ~.(values(@)[].freeform_tags):
                  ("Department" != null): true
